add patch functionality to sqlite examples
