# sqlite/routes/example.js
@@ -7,6 +7,8 @@ const {
     postExample,
     updateExamples,
     updateSpecificExample,
+    patchExamples,
+    patchSpecificExample,
     deleteExamples,
     deleteSpecificExample
 } = require('../controllers/example');
@@ -18,6 +20,9 @@ router.post('/example', postExample);
 
 router.put('/example', updateExamples);
 router.put('/example/:id', updateSpecificExample);
+
+router.patch('/example', patchExamples);
+router.patch('/example/:id', patchSpecificExample);
 
 router.delete('/example', deleteExamples);
 router.delete('/example/:id', deleteSpecificExample);
